# crab-engine

./: ..gitignore.un~  .Cargo.toml.un~  .README.md.un~  Cargo.toml  README.md
asset_converter/: Cargo.toml
asset_converter/src/: main.rs
assets/materials/: crate.mat
assets/shaders/: static_shader.frag  static_shader.vert
assets/shaders/common/: lighting.glsl
crab-engine/: Cargo.toml
engine/: Cargo.toml
engine/src/: core.rs  input.rs  lib.rs  loader.rs  logging.rs  renderer.rs  scene.rs  utils.rs
engine/src/loader/: material_file_loader.rs  mesh_loader.rs  shader_loader.rs  texture_loader.rs
engine/src/renderer/: material.rs  mesh.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
engine/src/scene/: camera.rs  lights.rs  object.rs
engine/src/scene/camera/: fly_cam.rs
engine/src/utils/: shader_preprocessor.rs
engine_asset/: Cargo.toml
engine_asset/src/: lib.rs
importer/: Cargo.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
