[workspace]
resolver = "2"

members = [
    "engine",
    "sandbox"
]

[workspace.dependencies]
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glam = "0.29"
bytemuck = { version = "1.19", features = ["derive"] }
anyhow = "1"
thiserror = "2"
image = "0.25"
