[workspace]
resolver = "2"

members = [
    "engine", "engine_asset", "importer",
    "sandbox"
]

[workspace.dependencies]
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1.19", features = ["derive"] }
anyhow = "1"
thiserror = "2"
image = { version = "0.25", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
asset-importer = { version = "0.8.0", features = ["glam"] }
