[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
engine_asset = { path = "../engine_asset" }
